configured GraphQL queries

--- a/src/content/products/products.mdx
+++ b/src/content/products/products.mdx
@@ -5,6 +5,6 @@ title: "Products"
 export const products = [
   {
     name: "Brownies",
-    img: "../..images/brownies.png
-  }
+    img: "./images/brownies.png",
+  },
 ]
