--- a/src/content/reviews/reviews.mdx
+++ b/src/content/reviews/reviews.mdx
@@ -1,5 +1,23 @@
 ---
-title: "Elevated Infusions"
-subtitlePrefix: "Decadent infused creations for"
-subtitle: "celebrations & every-day indulgence."
+title: "Reviews"
+subtitle: "that tell it like it is"
 ---
+
+export const reviews = [
+  {
+    path: "/reviews/campfireburnout",
+    date: "08-01-2020",
+    title: "Campfire Burnout",
+    videoSourceURL: "https://www.youtube.com/embed/dQw4w9WgXcQ",
+    videoTitle: "CAMPFIRE BURNOUT Hazy Treats by ELEVATED INFUSIONS",
+    author: "Sarkazz Here",
+  },
+  {
+    path: "/reviews/funfetticupcake",
+    date: "07-30-2020",
+    title: "Funfetti Cupcake",
+    videoSourceURL: "https://www.youtube.com/watch?v=WfT2MdC6aYw",
+    videoTitle: "FUNFETTI CUPCAKE Elevated Infusions HAZY TREATS",
+    author: "Sarkazz Here",
+  },
+]
