header img and hero info

--- a/src/content/hero/hero.mdx
+++ b/src/content/hero/hero.mdx
@@ -2,4 +2,8 @@
 title: "Elevated Infusions"
 subtitlePrefix: "Decadent infused creations for"
 subtitle: "celebrations & every-day indulgence."
+image: "./assortment.png"
 ---
+
+import Underlining from "../../styles/Underlining"
+import Theme from "../../styles/Theme"
