--- a/src/content/products/products.mdx
+++ b/src/content/products/products.mdx
@@ -5,6 +5,32 @@ title: "Products"
 export const products = [
   {
     name: "Brownies",
+    img: "./images/brownies2.jpg",
+    cols: 3,
+  },
+  {
+    name: "Cinnamon Buns",
+    img: "./images/cinnamonbun1.png",
+    cols: 1,
+  },
+  {
+    name: "Cinnamon Toast Bars",
+    img: "./images/cinnamontoast1.png",
+    cols: 1,
+  },
+  {
+    name: "Cupcake 2",
+    img: "./images/cupcake1.png",
+    cols: 1,
+  },
+  {
+    name: "Cupcakes",
+    img: "./images/cupcake2.png",
+    cols: 3,
+  },
+  {
+    name: "Brownies2",
     img: "./images/brownies.png",
+    cols: 3,
   },
 ]
