added images to product grid

--- a/src/content/products/products.mdx
+++ b/src/content/products/products.mdx
@@ -4,33 +4,75 @@ title: "Products"
 
 export const products = [
   {
-    name: "Brownies",
-    img: "./images/brownies2.jpg",
-    cols: 3,
+    name: "Cupcakes",
+    img: "./images/funfetti.jpg",
+    cols: 2,
+    hidden: "false",
+  },
+  {
+    name: "Cupcakes",
+    img: "./images/pinkCake.jpg",
+    cols: 1,
+    hidden: "true",
   },
   {
     name: "Cinnamon Buns",
     img: "./images/cinnamonbun1.png",
     cols: 1,
+    hidden: "true",
   },
   {
-    name: "Cinnamon Toast Bars",
+    name: "Cinnamon Buns",
+    img: "./images/cinnabon2.jpg",
+    cols: 1,
+    hidden: "true",
+  },
+  {
+    name: "Cinnamon Buns",
+    img: "./images/cinnamonbun2.png",
+    cols: 1,
+    hidden: "false",
+  },
+  {
+    name: "Smores Brownies",
+    img: "./images/browniessmore.jpg",
+    cols: 3,
+    hidden: "false",
+  },
+  {
+    name: "Cereal Series",
     img: "./images/cinnamontoast1.png",
     cols: 1,
+    hidden: "false",
   },
   {
-    name: "Cupcake 2",
-    img: "./images/cupcake1.png",
+    name: "Cereal Series",
+    img: "./images/fruitypebbles2.jpg",
     cols: 1,
+    hidden: "true",
   },
   {
-    name: "Cupcakes",
+    name: "Cereal Series",
+    img: "./images/cinnamontoast2.png",
+    cols: 1,
+    hidden: "true",
+  },
+  {
+    name: "Red Velvet Cupcake",
     img: "./images/cupcake2.png",
     cols: 3,
+    hidden: "false",
   },
   {
-    name: "Brownies2",
-    img: "./images/brownies.png",
-    cols: 3,
+    name: "Blondies",
+    img: "./images/blondie.jpg",
+    cols: 1,
+    hidden: "true",
+  },
+  {
+    name: "Brownies",
+    img: "./images/brownies3.jpg",
+    cols: 2,
+    hidden: "false",
   },
 ]
