implemented parallax and tweaked header

--- a/src/content/hero/hero.mdx
+++ b/src/content/hero/hero.mdx
@@ -3,7 +3,7 @@ title: "Elevated Infusions"
 subtitlePrefix: "Decadent infused creations for"
 subtitle: "celebrations & every-day indulgence."
 image: "./assortment.png"
+logo: "../../images/branding/longlogopink.png"
 ---
 
-import Underlining from "../../styles/Underlining"
 import Theme from "../../styles/Theme"
