products section complete

--- a/src/content/hero/hero.mdx
+++ b/src/content/hero/hero.mdx
@@ -2,6 +2,7 @@
 title: "Elevated Infusions"
 subtitlePrefix: "Decadent infused creations for"
 subtitle: "celebrations & every-day indulgence."
+tag: "#blackbusinessNYC"
 image: "./assortment.png"
 logo: "../../images/branding/longlogopink.png"
 ---
