landing point for fixes

--- a/src/content/intro/intro.mdx
+++ b/src/content/intro/intro.mdx
@@ -1,10 +1,10 @@
+---
 title: "Treet Yo Self!"
-body: "At Elevated Infusions, we believe you shouldn't have to choose between flavorful decadence and euphoric enlightenment. Black-owned and exclusively baking in NYC, our products uplift and delight for quiet introspective or lively (socially distant) fun."
-contactBody: "For info or orders,"
-contact: [email](mailto:elevatedinfusions1@gmail.com) or [DM](https://www.instagram.com/elevateyourinfusions/).
+body: "At Elevated Infusions, we believe you shouldn't have to choose between flavorful decadence and euphoric enlightenment. Black-owned and exclusively baking in NYC, our products uplift and delight for quiet introspective or lively, socially distant fun."
+contactIntro: "For info or orders"
+contact: "[email](mailto:elevatedinfusions1@gmail.com) or [DM](https://www.instagram.com/elevateyourinfusions/)."
 image: "../../images/mainProducts/assortment2.jpg"
-logo: "../../images/branding/circularLogo.png"
-
+logo: "../../images/branding/logoBlue.png"
 ---
 
-import Theme from "../../styles/Theme
+At Elevated Infusions, we believe you shouldn't have to choose between flavorful decadence and euphoric enlightenment. Black-owned and exclusively baking in NYC, our products uplift and delight for quiet introspective or lively, socially distant fun.
