--- a/src/content/intro/intro.mdx
+++ b/src/content/intro/intro.mdx
@@ -1,10 +1,9 @@
 ---
-title: "Treet Yo Self!"
-body: "At Elevated Infusions, we believe you shouldn't have to choose between flavorful decadence and euphoric enlightenment. Black-owned and exclusively baking in NYC, our products uplift and delight for quiet introspective or lively, socially distant fun."
+intro: "At Elevated Infusions, we believe you shouldn't have to choose between flavorful decadence and euphoric enlightenment. ✨"
+main: "#BlackOwned and exclusively baking in #NYC, our products uplift and delight for quiet introspective or lively, socially distant fun. Made with only the finest ingredients and generous portions of joy, we guarantee adventure no matter where the journey leads. 🦸🏽‍♀️"
 contactIntro: "For info or orders"
 contact: "[email](mailto:elevatedinfusions1@gmail.com) or [DM](https://www.instagram.com/elevateyourinfusions/)."
 image: "../../images/mainProducts/assortment2.jpg"
 logo: "../../images/branding/logoBlue.png"
+titleImg: "../../images/branding/treetyourself.png"
 ---
-
-At Elevated Infusions, we believe you shouldn't have to choose between flavorful decadence and euphoric enlightenment. Black-owned and exclusively baking in NYC, our products uplift and delight for quiet introspective or lively, socially distant fun.
