components: review section

--- a/src/content/products/products.mdx
+++ b/src/content/products/products.mdx
@@ -5,206 +5,134 @@ title: "Products"
 export const products = [
   {
     name: "Cupcakes",
-    img: "./images/cupcake1.png",
-    cols: 2,
-    hidden: "false",
+    img: "./images/cupcake1.jpg",
   },
   {
     name: "Cupcakes",
     img: "./images/cupcake2.png",
-    cols: 1,
-    hidden: "true",
   },
   {
     name: "Cupcakes",
     img: "./images/cupcake3.jpg",
-    cols: 1,
-    hidden: "true",
   },
   {
     name: "Cupcakes",
     img: "./images/cupcake4.jpg",
-    cols: 1,
-    hidden: "true",
   },
   {
     name: "Cupcakes",
     img: "./images/cupcake5.jpg",
-    cols: 1,
-    hidden: "false",
   },
   {
     name: "Cupcakes",
     img: "./images/cupcake6.jpg",
-    cols: 3,
-    hidden: "false",
   },
   {
     name: "Cupcakes",
     img: "./images/cupcake7.jpg",
-    cols: 3,
-    hidden: "false",
   },
   {
     name: "Cupcakes",
     img: "./images/cupcake8.jpg",
-    cols: 3,
-    hidden: "false",
   },
   {
     name: "Cupcakes",
     img: "./images/cupcake9.png",
-    cols: 3,
-    hidden: "false",
   },
   {
     name: "Brownies",
-    img: "./images/brownies1.png",
-    cols: 1,
-    hidden: "false",
+    img: "./images/brownies1.jpg",
+  },
+  {
+    name: "Brownies",
+    img: "./images/browniessmore.jpg",
   },
   {
     name: "Brownies",
     img: "./images/brownies2.jpg",
-    cols: 1,
-    hidden: "true",
   },
   {
     name: "Brownies",
-    img: "./images/brownies3.jpg",
-    cols: 1,
-    hidden: "true",
+    img: "./images/browniessmore2.jpg",
+  },
+  {
+    name: "Brownies",
+    img: "./images/specials1.jpg",
   },
   {
     name: "Brownies",
     img: "./images/brownies4.jpg",
-    cols: 3,
-    hidden: "false",
   },
   {
     name: "Brownies",
     img: "./images/brownies5.jpg",
-    cols: 1,
-    hidden: "true",
   },
   {
     name: "Brownies",
     img: "./images/brownies7.jpg",
-    cols: 1,
-    hidden: "true",
   },
   {
     name: "Brownies",
     img: "./images/brownies6.jpg",
-    cols: 1,
-    hidden: "true",
   },
   {
     name: "CerealSeries",
     img: "./images/cerealseries1.png",
-    cols: 2,
-    hidden: "false",
   },
   {
     name: "CerealSeries",
     img: "./images/cerealseries2.png",
-    cols: 2,
-    hidden: "false",
   },
   {
     name: "CerealSeries",
     img: "./images/cerealseries3.jpg",
-    cols: 2,
-    hidden: "false",
   },
   {
     name: "CerealSeries",
     img: "./images/cerealseries4.jpg",
-    cols: 2,
-    hidden: "false",
   },
   {
     name: "CerealSeries",
     img: "./images/cerealseries5.jpg",
-    cols: 2,
-    hidden: "false",
   },
   {
     name: "CerealSeries",
     img: "./images/cerealseries6.jpg",
-    cols: 2,
-    hidden: "false",
   },
   {
     name: "Cinnamon Buns",
     img: "./images/cinnabon1.jpg",
-    cols: 2,
-    hidden: "false",
   },
   {
     name: "Cinnamon Buns",
     img: "./images/cinnabon2.jpg",
-    cols: 2,
-    hidden: "false",
   },
   {
     name: "Cinnamon Buns",
     img: "./images/cinnabon3.jpg",
-    cols: 2,
-    hidden: "false",
   },
   {
     name: "Cinnamon Buns",
     img: "./images/cinnabon4.jpg",
-    cols: 2,
-    hidden: "false",
   },
   {
-    name: "Krispies",
-    img: "./images/krispie1.png",
-    cols: 2,
-    hidden: "false",
-  },
-  {
-    name: "Krispies",
-    img: "./images/krispie2.jpg",
-    cols: 2,
-    hidden: "false",
-  },
-  {
-    name: "Krispies",
-    img: "./images/krispie3.png",
-    cols: 2,
-    hidden: "false",
-  },
-  {
-    name: "Krispies",
+    name: "CerealSeries",
     img: "./images/krispie4.jpeg",
-    cols: 2,
-    hidden: "false",
   },
   {
-    name: "Krispies",
+    name: "CerealSeries",
     img: "./images/krispie5.jpg",
-    cols: 2,
-    hidden: "false",
   },
   {
-    name: "Krispies",
+    name: "CerealSeries",
     img: "./images/krispie6.jpg",
-    cols: 2,
-    hidden: "false",
   },
   {
     name: "Specials",
     img: "./images/specials1.jpg",
-    cols: 2,
-    hidden: "false",
   },
   {
     name: "Specials",
     img: "./images/specials2.jpg",
-    cols: 2,
-    hidden: "false",
   },
 ]
