style: menu and reviews logos

--- a/src/content/products/products.mdx
+++ b/src/content/products/products.mdx
@@ -100,20 +100,32 @@ export const products = [
     img: "./images/cerealseries6.jpg",
   },
   {
-    name: "Cinnamon Buns",
+    name: "Specials",
     img: "./images/cinnabon1.jpg",
   },
   {
-    name: "Cinnamon Buns",
+    name: "Specials",
     img: "./images/cinnabon2.jpg",
   },
   {
-    name: "Cinnamon Buns",
+    name: "Specials",
     img: "./images/cinnabon3.jpg",
   },
   {
-    name: "Cinnamon Buns",
+    name: "Specials",
     img: "./images/cinnabon4.jpg",
+  },
+  {
+    name: "Specials",
+    img: "./images/krispie1.png",
+  },
+  {
+    name: "Specials",
+    img: "./images/specials7.JPG",
+  },
+  {
+    name: "Specials",
+    img: "./images/krispie2.jpg",
   },
   {
     name: "CerealSeries",
