feature: reviews component

--- a/src/content/reviews/reviews.mdx
+++ b/src/content/reviews/reviews.mdx
@@ -1,7 +1,9 @@
 ---
-title: "Reviews"
+title: "Campfire Burnout"
 subtitle: "that tell it like it is"
 ---
+
+youtube: dQw4w9WgXcQ
 
 export const reviews = [
   {
