--- a/src/content/intro/intro.mdx
+++ b/src/content/intro/intro.mdx
@@ -1,6 +1,6 @@
 ---
 intro: "At Elevated Infusions, we believe you shouldn't have to choose between flavorful decadence and euphoric enlightenment. ✨"
-main: "#BlackOwned and exclusively baking in #NYC, our products uplift and delight for quiet introspective or lively, socially distant fun. Made with only the finest ingredients and generous portions of joy, we guarantee adventure no matter where the journey leads. 🦸🏽‍♀️"
+main: "Exclusively baking for the #NYCfam, our products uplift and delight for quiet introspective or lively, socially distant fun. Made with only the finest ingredients and generous portions of joy, we guarantee adventure no matter where the journey leads. 🦸🏽‍♀️"
 contactIntro: "For info or orders"
 contact: "[email](mailto:elevatedinfusions1@gmail.com) or [DM](https://www.instagram.com/elevateyourinfusions/)."
 image: "../../images/mainProducts/assortment2.jpg"
