--- a/src/content/products/products.mdx
+++ b/src/content/products/products.mdx
@@ -5,146 +5,146 @@ title: "Products"
 export const products = [
   {
     name: "Cupcakes",
-    img: "./images/cupcake1.webp",
+    img: "./images/cupcake1.jpg",
   },
   {
     name: "Cupcakes",
-    img: "./images/cupcake2.webp",
+    img: "./images/cupcake2.png",
   },
   {
     name: "Cupcakes",
-    img: "./images/cupcake3.webp",
+    img: "./images/cupcake3.jpg",
   },
   {
     name: "Cupcakes",
-    img: "./images/cupcake4.webp",
+    img: "./images/cupcake4.jpg",
   },
   {
     name: "Cupcakes",
-    img: "./images/cupcake5.webp",
+    img: "./images/cupcake5.jpg",
   },
   {
     name: "Cupcakes",
-    img: "./images/cupcake6.webp",
+    img: "./images/cupcake6.jpg",
   },
   {
     name: "Cupcakes",
-    img: "./images/cupcake7.webp",
+    img: "./images/cupcake7.jpg",
   },
   {
     name: "Cupcakes",
-    img: "./images/cupcake8.webp",
+    img: "./images/cupcake8.jpg",
   },
   {
     name: "Cupcakes",
-    img: "./images/cupcake9.webp",
+    img: "./images/cupcake9.png",
   },
   {
     name: "Brownies",
-    img: "./images/brownies1.webp",
+    img: "./images/brownies1.jpg",
   },
   {
     name: "Brownies",
-    img: "./images/browniessmore.webp",
+    img: "./images/browniessmore.jpg",
   },
   {
     name: "Brownies",
-    img: "./images/brownies2.webp",
+    img: "./images/brownies2.jpg",
   },
   {
     name: "Brownies",
-    img: "./images/browniessmore2.webp",
+    img: "./images/browniessmore2.jpg",
   },
   {
     name: "Brownies",
-    img: "./images/specials1.webp",
+    img: "./images/specials1.jpg",
   },
   {
     name: "Brownies",
-    img: "./images/brownies4.webp",
+    img: "./images/brownies4.jpg",
   },
   {
     name: "Brownies",
-    img: "./images/brownies5.webp",
+    img: "./images/brownies5.jpg",
   },
   {
     name: "Brownies",
-    img: "./images/brownies7.webp",
+    img: "./images/brownies7.jpg",
   },
   {
     name: "Brownies",
-    img: "./images/brownies6.webp",
+    img: "./images/brownies6.jpg",
   },
   {
     name: "CerealSeries",
-    img: "./images/cerealseries1.webp",
+    img: "./images/cerealseries1.png",
   },
   {
     name: "CerealSeries",
-    img: "./images/cerealseries2.webp",
+    img: "./images/cerealseries2.png",
   },
   {
     name: "CerealSeries",
-    img: "./images/cerealseries3.webp",
+    img: "./images/cerealseries3.jpg",
   },
   {
     name: "CerealSeries",
-    img: "./images/cerealseries4.webp",
+    img: "./images/cerealseries4.jpg",
   },
   {
     name: "CerealSeries",
-    img: "./images/cerealseries5.webp",
+    img: "./images/cerealseries5.jpg",
   },
   {
     name: "CerealSeries",
-    img: "./images/cerealseries6.webp",
+    img: "./images/cerealseries6.jpg",
   },
   {
     name: "Specials",
-    img: "./images/cinnabon1.webp",
+    img: "./images/cinnabon1.jpg",
   },
   {
     name: "Specials",
-    img: "./images/cinnabon2.webp",
+    img: "./images/cinnabon2.jpg",
   },
   {
     name: "Specials",
-    img: "./images/cinnabon3.webp",
+    img: "./images/cinnabon3.jpg",
   },
   {
     name: "Specials",
-    img: "./images/cinnabon4.webp",
+    img: "./images/cinnabon4.jpg",
   },
   {
     name: "Specials",
-    img: "./images/krispie1.webp",
+    img: "./images/krispie1.png",
   },
   {
     name: "Specials",
-    img: "./images/specials7.webp",
+    img: "./images/specials7.JPG",
   },
   {
     name: "Specials",
-    img: "./images/krispie2.webp",
+    img: "./images/krispie2.jpg",
   },
   {
     name: "CerealSeries",
-    img: "./images/krispie4.webp",
+    img: "./images/krispie4.jpeg",
   },
   {
     name: "CerealSeries",
-    img: "./images/krispie5.webp",
+    img: "./images/krispie5.jpg",
   },
   {
     name: "CerealSeries",
-    img: "./images/krispie2.webp",
+    img: "./images/krispie2.jpg",
   },
   {
     name: "Specials",
-    img: "./images/specials1.webp",
+    img: "./images/specials1.jpg",
   },
   {
     name: "Specials",
-    img: "./images/specials2.webp",
+    img: "./images/specials2.jpg",
   },
 ]
