--- a/src/content/products/products.mdx
+++ b/src/content/products/products.mdx
@@ -137,7 +137,7 @@ export const products = [
   },
   {
     name: "CerealSeries",
-    img: "./images/krispie2.jpg",
+    img: "./images/krispie8.png",
   },
   {
     name: "Specials",
