--- a/src/content/intro/intro.mdx
+++ b/src/content/intro/intro.mdx
@@ -3,7 +3,7 @@ intro: "At Elevated Infusions, we believe you shouldn't have to choose between f
 main: "Exclusively baking for the #NYC community, our products uplift and delight for quiet introspection or lively, socially distant fun. Made with only the finest ingredients and generous portions of joy, we guarantee adventure no matter where the journey leads. 🦸🏽‍♀️"
 contactIntro: "For info or orders"
 contact: "[email](mailto:elevatedinfusions1@gmail.com) or [DM](https://www.instagram.com/elevateyourinfusions/)."
-image: "../../images/mainProducts/assortment2.jpg"
-logo: "../../images/branding/logoBlue.png"
-titleImg: "../../images/branding/treetyourself.png"
+image: "../../images/mainProducts/assortment2.webp"
+logo: "../../images/branding/logoBlue.webp"
+titleImg: "../../images/branding/treetyourself.webp"
 ---
