--- a/src/content/hero/hero.mdx
+++ b/src/content/hero/hero.mdx
@@ -3,6 +3,6 @@ title: "Elevated Infusions"
 subtitlePrefix: "Decadent infused creations for"
 subtitle: "celebrations & every-day indulgence."
 tag: "#blackbusinessNYC"
-image: "./assortment.webp"
-logo: "../../images/branding/longlogo.webp"
+image: "./assortment.png"
+logo: "../../images/branding/longlogo.png"
 ---
