styling changes, added link to shop

--- a/src/content/intro/intro.mdx
+++ b/src/content/intro/intro.mdx
@@ -1,4 +1,6 @@
 ---
 intro: "At Elevated Infusions, we believe you shouldn't have to choose between flavorful decadence and euphoric enlightenment. ✨"
 main: "Exclusively baking for the #NYC community, our products uplift and delight for quiet introspection or lively, socially distant fun. Made with only the finest ingredients and generous portions of joy, we guarantee adventure no matter where the journey leads. 🦸🏽‍♀️"
+purchaseHeader: "Shop Now"
+purchaseLink: "https://www.ritual.co/order/elevated-infusions-32nd-st-30th-ave-long-island-city/5974"
 ---
